fix problem about z-index of sidebar / filter bar

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -11,9 +11,9 @@
     {
         width:0%;
         height:100%;
-        background:black;
+        background: #00a99d !important;
         position:absolute;
-        z-index:2;
+        z-index:5;
         opacity:0;
         transition: opacity .2s ease-in-out;
     }
@@ -26,7 +26,7 @@
         position:fixed;
         box-shadow:none;
         height:40px;
-        z-index: 3;
+        z-index: 6;
         overflow-y:auto;
         overflow-x:visible;
         padding-bottom:60px;
@@ -42,7 +42,7 @@
         width: 30px;
         text-align: center;
         box-shadow:3px 3px 5px rgba(0,0,0,0.01);
-        z-index:3;
+        z-index:6;
         transition: left .2s ease-in-out;
     }
     #wrapper.toggled #menu_toggle
@@ -229,7 +229,7 @@
     #wrapper.toggled #sidebar_backdrop
     {
         width:100%;
-        opacity:0.3;
+        opacity:0.8;
     }
     
     @media (min-width: 769px) {
